[gd_scene format=3 uid="uid://benkv22obmc62"]

[ext_resource type="Script" uid="uid://dg4jowk6cax8m" path="res://scenes/ui/buildings/production_entry_panel.gd" id="1_k0mrk"]
[ext_resource type="Theme" uid="uid://bsa4ociwyndea" path="res://resources/themes/game_theme.tres" id="1_nyvlx"]
[ext_resource type="Shader" uid="uid://blpj1ewfserni" path="res://resources/shaders/team_tint.gdshader" id="3_5kbff"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yslsw"]
shader = ExtResource("3_5kbff")
shader_parameter/disabled = 0.0
shader_parameter/original_colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
shader_parameter/replace_colors = PackedColorArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)

[node name="ProductionEntryPanel" type="Control" unique_id=1127310457]
custom_minimum_size = Vector2(250, 50)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_nyvlx")
script = ExtResource("1_k0mrk")

[node name="HBoxContainer" type="HBoxContainer" parent="." unique_id=268170177]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 15

[node name="UnitIcon" type="TextureRect" parent="HBoxContainer" unique_id=904546294]
material = SubResource("ShaderMaterial_yslsw")
layout_mode = 2

[node name="UnitName" type="Label" parent="HBoxContainer" unique_id=1716080869]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="UnitCost" type="Label" parent="HBoxContainer" unique_id=654533377]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2

[node name="BuildButton" type="Button" parent="HBoxContainer" unique_id=477208970]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
text = "Build"
